# SPIC_1D

./: .gitignore  CMakeLists.txt  ReadMe.txt
datasets/: turner_benchmark_he_electron_table.inp
include/ES_solvers/: ES_solver.hpp  ES_solver_EC.hpp  ES_solver_INGP.hpp  ES_solver_MC.hpp
include/charged_particle_operators/: charged_particle_operator.hpp  charged_particle_wall_injector.hpp
include/collisions/: null_collider.hpp
include/domain/: domain.hpp  non_uniform_domain.hpp  uniform_domain.hpp
include/globals/: constants.hpp  mpi_vars.hpp  plasma_functions.hpp  write_functions.hpp
include/non_linear_solvers/: AA_solver.hpp  non_linear_solver.hpp
include/particles/: charged_particle.hpp  target_particle.hpp
include/rand_gen/: maxwell_generator.hpp  pcg_rng.hpp
include/simulation/: simulation.hpp
include/solvers/: poisson_solver_1D.hpp  poisson_solver_1D_tridiag.hpp
include/util/: math_util.hpp
inputs/: geometry.inp  implicit_solver.inp  initial_setup.inp
inputs/charged_particles/: He+.inp  e.inp
inputs/particle_operations/: wall_injection.inp
inputs/target_particles/: He.inp
scripts/: dataSet_class.py  example_analysis.py  import_libraries_constants.py  plot_production.py
src/: main.cpp
src/ES_solvers/: ES_solver.cpp  ES_solver_EC.cpp  ES_solver_INGP.cpp  ES_solver_MC.cpp
src/charged_particle_operators/: charged_particle_operator.cpp  charged_particle_wall_injector.cpp
src/collisions/: null_collider.cpp
src/domain/: domain.cpp
src/globals/: mpi_vars.cpp  write_functions.cpp
src/non_linear_solvers/: AA_solver.cpp  (+1 more)
(+6 files in other folders)
